fix: resolve test issues in IrSanitization and ForumMonitor tests